--- a/Caddyfile
+++ b/Caddyfile
@@ -1,7 +1,14 @@
 # https://caddyserver.com/tutorial
+# you only should change the hostname
 caddy.example.com {
     gzip
-    proxy / localhost:8088
+    proxy / localhost:8088 {
+        header_upstream Host {host}
+        header_upstream X-Real-IP {remote}
+        header_upstream X-Forwarded-For {remote}
+        header_upstream X-Forwarded-Port {server_port}
+        header_upstream X-Forwarded-Proto {scheme}
+    }
     header /images {
         Cache-Control "public, max-age=31536000"
     }
